[package]
name = "advent_of_code_2016"
version = "0.1.0"
authors = ["Frazer McLean <frazer@frazermclean.co.uk>"]

[dependencies]
clap = "2.29.0"
nom = "3.2.1"
itertools = "0.7.4"
rust-crypto = "0.2.36"
hex = "0.3.1"
termion = "1.5.1"
ndarray = "0.11.0"
maplit = "1.0.0"
rayon = "0.9.0"
iterslide = "1.0.0"

[[bin]]
name = "aoc"
path = "src/main.rs"
